Bug 321201 - Fade Desktop effect takes place while fullscreen effect (desktop grid) is active
Summary: Fade Desktop effect takes place while fullscreen effect (desktop grid) is active
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.10.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 365930 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-16 02:17 UTC by Lukas
Modified: 2018-10-10 11:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas 2013-06-16 02:17:40 UTC
When switching a desktop with Fade Desktop effect it looks like a clean workspace is showed immediatelly and then is appearing window on that workspace. In the final it makes bad-looking blinks. This problem is same in Desktop Grid with Fade Desktop. For better understanding you can decrease the animation speed to slow or very slow. Then it's more obvious.

Reproducible: Always
Comment 1 Lukas 2013-06-16 02:20:44 UTC
Just note: I am using nvidia drivers and this bug was in 4.9 too (and maybe 4.8)
Comment 2 Thomas Lübking 2013-06-16 11:17:33 UTC
- Is the behavior the same after
  * disabling color correction (bug #321218)
  * disabling OpenGL 2.0 shaders, resp. on the xrender backend?
- Do you use one activity per virtual desktop (ie. the plasma approach to have different wallpapers on different virtual desktops)?
Comment 3 Lukas 2013-06-16 11:42:20 UTC
Disabling color correction and/or opengl 2.0 shaders doesn't solve this. Xrender backend same issue too. I don't use any special activity. I had only one with wallpaper and widgets same for all workspaces. As I am testing differ settings now, it change behaviour to I know from older KDE versions...there is no desktop blink, but actull window from desktop I am switching. Not sure what makes this appears now. However when switching from empty workspace, there is classic wallpaper blink. I recorded it https://docs.google.com/file/d/0BxqgMBnbhgmKTnFQZlJwb2tJLUE/edit
Comment 4 Thomas Lübking 2013-06-16 12:07:23 UTC
Thanks for the video ;-)

I can briefly see that and it depends on the correlation of the animation duration in desktop grid as compared to the static time for the fade desktop effect 

(FYI: there many more different ways to trigger a desktop change and this effect should not be triggered while desktop grid is active)
Comment 5 Lukas 2013-06-16 12:15:05 UTC
I am glad to help. Just wondering that nobody reports this earlier. :)
Comment 6 Martin Flöser 2013-06-16 17:38:24 UTC
Finally a reason to add a fullscreenEffect property and a changed signal ;-)
Comment 7 Leszek Lesner 2017-09-15 10:46:24 UTC
This problem reoccured for at least KWin 5.10 (had 5.8.7 before where the problem did not happen [not tested kwin 5.9]). 
See example video: https://www.youtube.com/watch?v=L7UbJHe0p6c
Comment 8 Vlad Zahorodnii 2018-07-12 13:35:34 UTC
*** Bug 365930 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2018-10-10 11:33:12 UTC
Git commit b1b1360ec3fb0ddddcfed2d3db90985cf8495aa8 by David Edmundson.
Committed on 10/10/2018 at 11:32.
Pushed by davidedmundson into branch 'master'.

[effects/fadedesktop] Set animation as a fullscreen effect

Summary:
This lets other effects know whether they should inhibit or not which
reduces
visual glitches of overlapping animations.
FIXED-IN: 5.15.0

Test Plan: Switched desktops, they still faded

Reviewers: #kwin, zzag

Subscribers: zzag, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D15474

M  +18   -3    effects/fadedesktop/package/contents/code/main.js

https://commits.kde.org/kwin/b1b1360ec3fb0ddddcfed2d3db90985cf8495aa8