kcmkwin/kwindesktop/main.h
@@ -71,7 +71,6 @@ private Q_SLOTS:
 private:
     void init();
     void addAction(const QString &name, const QString &label);
-    bool effectEnabled(const QString& effect, const KConfigGroup& cfg) const;
     QString extrapolatedShortcut(int desktop) const;
 
 private:
